--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native": "^7.1.8",
     "@supabase/supabase-js": "^2.76.1",
     "expo": "~54.0.13",
+    "expo-checkbox": "~5.0.7",
     "expo-constants": "~18.0.9",
     "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
