--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
+    "@reduxjs/toolkit": "^2.10.1",
     "@supabase/supabase-js": "^2.76.1",
     "expo": "~54.0.13",
     "expo-checkbox": "~5.0.7",
@@ -42,10 +43,12 @@
     "react-native-url-polyfill": "^3.0.0",
     "react-native-vector-icons": "^10.3.0",
     "react-native-web": "~0.21.0",
-    "react-native-worklets": "0.5.1"
+    "react-native-worklets": "0.5.1",
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
+    "@types/react-redux": "^7.1.34",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
     "typescript": "~5.9.2"
