--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@supabase/supabase-js": "^2.76.1",
     "expo": "~54.0.13",
     "expo-checkbox": "~5.0.7",
-    "expo-constants": "~18.0.9",
+    "expo-constants": "~18.0.10",
     "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.9",
@@ -35,8 +35,10 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
+    "react-native-country-picker-modal": "^2.0.0",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-maps": "1.20.1",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
